--- a/app/index.html
+++ b/app/index.html
@@ -6,8 +6,8 @@
 	<link rel="stylesheet" href="css/app.min.css">
 </head>
 <body>
-	<p>Далеко-далеко ... hello за словесными горами в стране, гласных и согласных...</p>
-	<img src="images/dest/image.jpg" alt="Alt">
+	<p>Далеко-далеко ... hello за словесными горами в стране, гласных и согласных...привет check gulp.</p>
+	<img src="images/dest/yoda.jpg" alt="Alt">
 <script src="js/app.min.js"></script> 
 </body>
 </html>
